syntax = "proto3";
package kaf.api;
option go_package = "api";

import "google/protobuf/empty.proto";

message CreateTopicRequest {}

message CreateTopicResponse {}

message ListTopicsRequest { string cluster = 1; }

message ListTopicsResponse { repeated Topic topics = 1; }

message GetTopicRequest {}

message DeleteTopicRequest {}

message UpdateTopicRequest {}

message Topic {
  string name = 1;
  int32 numReplicas = 2;
  int32 numPartitions = 3;
  repeated Partition partitions = 4;
  repeated TopicConfig config = 5;
  int64 messages = 6;
}

message TopicConfig {
  string name = 1;
  string value = 2;
  bool read_only = 3;
  bool sensitive = 4;
}

message Partition {
  int32 number = 1;
  int64 offset = 2;
  int64 high_watermark = 3;
  int32 leader = 4;
  repeated int32 replicas = 5;
  repeated int32 isr = 6;
}

message GetHighWatermarksRequest {
  string cluster = 1;
  repeated string topics = 2;
}

message TopicHighWatermarks { map<int32, int64> high_watermarks = 1; }

message GetHighWatermarksResponse {
  map<string, TopicHighWatermarks> high_watermarks = 1;
}

service TopicService {
  rpc CreateTopic(CreateTopicRequest) returns (Topic);
  rpc GetTopic(GetTopicRequest) returns (Topic);
  rpc UpdateTopic(UpdateTopicRequest) returns (Topic);
  rpc ListTopics(ListTopicsRequest) returns (ListTopicsResponse);
  rpc DeleteTopic(DeleteTopicRequest) returns (google.protobuf.Empty);

  rpc GetHighWatermarks(GetHighWatermarksRequest)
      returns (GetHighWatermarksResponse);
}
